# seravops

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.yml  pyproject.toml
app/: __init__.py  db.py  main.py
app/core/: __init__.py  config.py  deps.py  logging.py  security.py
app/models/: __init__.py  enums.py  execution.py  recipe.py  service.py  user.py
app/routers/: __init__.py  auth.py  executions.py  recipes.py  services.py  users.py
app/schemas/: __init__.py  auth.py  execution.py  recipe.py  service.py  user.py
app/services/: auth_service.py  git_service.py  nginx_service.py  recipe_service.py  service_service.py  ssh_service.py  user_service.py
app/static/: app.css
app/templates/: base.html  login.html
app/templates/executions/: _status.html  detail.html
app/templates/nginx/: reverse_proxy.conf.j2
app/templates/recipes/: detail.html  edit.html  list.html  new.html
app/templates/services/: edit.html  list.html  new.html
app/templates/users/: edit.html  list.html  new.html
docs/: architecture.md  production.md  recipes.md
migrations/: env.py
migrations/versions/: 17fb071bfece_cascade_delete_recipe_executions.py  20260702_0001_initial.py  ca3078f12662_add_allowed_ips_to_users.py
scripts/: bootstrap-demo.sh
tests/: conftest.py  test_auth_service.py  test_main.py  test_nginx_service.py  test_recipe_service.py
