[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seravops"
version = "0.1.0"
description = "Deployment recipe orchestration platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2.0",
    "asyncpg>=0.30,<1.0",
    "asyncssh>=2.20,<3.0",
    "fastapi>=0.115,<1.0",
    "jinja2>=3.1,<4.0",
    "pwdlib[argon2]>=0.2,<1.0",
    "pydantic-settings>=2.7,<3.0",
    "pyjwt>=2.10,<3.0",
    "python-multipart>=0.0.20,<1.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "structlog>=25.1,<26.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.21,<1.0",
    "black>=25.1,<26.0",
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "ruff>=0.11,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
